syntax = "proto3";

package Processor;

service EventReceiver {
  rpc ReceiveEvent (Telemetry) returns (Ack) {}
}

message Telemetry {
  string deviceId = 1;
  int32 speed = 2;
  int32 temperature = 3;
}

message Ack {
  string message = 1;
}
